--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -23,7 +23,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install '.'
-          pip install mypy
+          pip install mypy pytest
+      - name: Run pytest
+        run: |
+          pytest ./traktexport/*.py
       - name: Run mypy
         run: |
           mypy ./traktexport
