--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9, "3.10"]
+        python-version: [3.8, 3.9, "3.10", "3.11"]
 
     steps:
       - uses: actions/checkout@v2
@@ -22,11 +22,13 @@ jobs:
       - name: Install packages
         run: |
           python -m pip install --upgrade pip
-          pip install '.'
-          pip install mypy pytest
+          pip install '.[testing]'
       - name: Run pytest
         run: |
           pytest ./traktexport/*.py
       - name: Run mypy
         run: |
           mypy ./traktexport
+      - name: Run flake8
+        run: |
+          flake8 ./traktexport
