fix url in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = 0.1.4
 description = Export your Movies, TV shows and ratings from Trakt.tv
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = "https://github.com/seanbreckenridge/traktexport"
+url = https://github.com/seanbreckenridge/traktexport
 author = Sean Breckenridge
 author_email = "seanbrecke@gmail.com"
 license = MIT
