--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = traktexport
-version = 0.1.4
+version = 0.1.5
 description = Export your Movies, TV shows and ratings from Trakt.tv
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -18,6 +18,7 @@ classifiers =
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
 keywords = media movies export data
 
 [options]
@@ -25,9 +26,9 @@ packages = find:
 install_requires =
     IPython
     backoff
-    click>=8.0
+    click>=8.1
     logzero
-    trakt==3.0.0
+    pytrakt>=3.4.24
 python_requires = >=3.8
 include_package_data = True
 
