remove trakt-cli from CI, requires py3.10

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -28,7 +28,7 @@ jobs:
           pytest ./traktexport/*.py
       - name: Run mypy
         run: |
-          mypy ./traktexport ./scripts/trakt-cli
+          mypy ./traktexport
       - name: Run flake8
         run: |
-          flake8 ./traktexport ./scripts/trakt-cli
+          flake8 ./traktexport
